--- a/Conteúdos Fábio/Pyramid/Pyramid/Pyramid/Pyramid.csproj
+++ b/Conteúdos Fábio/Pyramid/Pyramid/Pyramid/Pyramid.csproj
@@ -1,19 +1,19 @@
 ﻿<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <ProjectGuid>{285FA337-C394-4031-B6ED-7030DF4750F3}</ProjectGuid>
+    <ProjectGuid>{27A16C14-D9C5-457B-BDB6-25335E804460}</ProjectGuid>
     <ProjectTypeGuids>{6D335F3A-9D43-41b4-9D22-F6F17C4BE596};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BielWorld</RootNamespace>
-    <AssemblyName>BielWorld</AssemblyName>
+    <RootNamespace>Pyramid</RootNamespace>
+    <AssemblyName>Pyramid</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <XnaFrameworkVersion>v4.0</XnaFrameworkVersion>
     <XnaPlatform>Windows</XnaPlatform>
     <XnaProfile>Reach</XnaProfile>
-    <XnaCrossPlatformGroupID>fe139e51-aae4-4edd-952d-b486ec4b8414</XnaCrossPlatformGroupID>
+    <XnaCrossPlatformGroupID>71ebada0-ffe1-435c-b3e6-dcb990cca3fa</XnaCrossPlatformGroupID>
     <XnaOutputType>Game</XnaOutputType>
     <ApplicationIcon>Game.ico</ApplicationIcon>
     <Thumbnail>GameThumbnail.png</Thumbnail>
@@ -74,11 +74,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
-    <Compile Include="_Camera.cs" />
-    <Compile Include="_House.cs" />
-    <Compile Include="_Quad.cs" />
-    <Compile Include="_Screen.cs" />
-    <Compile Include="_WallOrientation.cs" />
+    <Compile Include="Pyramid.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
@@ -87,10 +83,13 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\BielWorldContent\BielWorldContent.contentproj">
-      <Name>BielWorldContent</Name>
+    <ProjectReference Include="..\PyramidContent\PyramidContent.contentproj">
+      <Name>PyramidContent</Name>
       <XnaReferenceType>Content</XnaReferenceType>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
